--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Spotify Overlay Player</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
