--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,7 @@
 
         const login = () => {
             let url = "http://localhost:3000/callback"
-            let scope = "user-read-currently-playing user-modify-playback-state"
+            let scope = "user-read-currently-playing user-modify-playback-state user-read-playback-state user-library-modify user-library-read"
             const encodedScope = encodeURI(scope);
             const encoded = encodeURI(url);
             window.location.replace(`https://accounts.spotify.com/authorize?response_type=token&client_id=ce2cf5b6fc694345844dc8dc500ae46d&redirect_uri=${encoded}&scope=${encodedScope}`)
